# AI-CAR-VENDOR

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  justfile  pyproject.toml
alembic/versions/: 42c2f784a22b_first.py
scripts/: chat.py  populate_db.py
src/: car_router.py  config.py  constants.py  database.py  exceptions.py  main.py  router.py  schemas.py  services.py
